# gooroom-fe

./: .eslintrc.js  .eslintrc.json  Dockerfile  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
.next/: trace  (+1 more)
backend/: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  secret.txt  settings.json  test.sh
backend/api/v1/: api.py
backend/api/v1/auth/: auth_example.py
backend/api/v1/user/: user_example.py
backend/config/: connection.py  database.py
backend/config/constants/: neptune.py  ssh.py
backend/domain/: __init__.py  api.py
backend/domain/admin/: __init__.py  admin.py
backend/domain/admin/request/: __init__.py  delete_user_request.py
backend/domain/admin/response/: __init__.py  delete_user_response
backend/domain/auth/: __init__.py  auth.py  auth_example.py
backend/domain/auth/request/: __init__.py  pwchange_request.py  pwreset_request.py  send_verification_code_request.py  signin_request.py  signup_request.py  verification_request.py
backend/domain/auth/response/: __init__.py  pwchange_response.py  pwreset_response.py  refresh_acc_token_response.py  send_verification_code_response.py  signin_response.py  signout_response.py  signup_response.py  singout_response.py  verification_response.py  verify_access_token_response.py
backend/domain/service/: __init__.py
backend/domain/test/: __init__.py  dummy.py  test.py
backend/domain/user/: __init__.py  user.py  user_example.py
backend/utils/: __init__.py  email_verification.py  jwt_utils.py  logger.py  send_email.py
(+368 files in other folders)
