[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Dcaffein <hj02117@korea.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
paramiko = "^3.4.0"
python-dotenv = "^1.0.1"
fastapi = "^0.111.0"
nest-asyncio = "^1.6.0"
colorama = "^0.4.6"
uvicorn = "^0.30.1"
pydantic = "^2.7.4"
pyjwt = "^2.8.0"
bcrypt = "^4.1.3"
apscheduler = "^3.10.4"
neo4j = "^5.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
